// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action-types should create action types and actions with tests 1`] = `
"
--------------------------------------------------------------------------------
// ./action-types/__tests__/index.spec.js
// Create
--------------------------------------------------------------------------------

import { AN_ACTION, ANOTHER_ACTION } from '../';

describe('\`test\` action types', () => {
  it('should export \`AN_ACTION\` type', () => {
    expect(AN_ACTION).toBe('AN_ACTION');
  });

  it('should export \`ANOTHER_ACTION\` type', () => {
    expect(ANOTHER_ACTION).toBe('ANOTHER_ACTION');
  });
});







--------------------------------------------------------------------------------
// ./action-types/index.js
// Create
--------------------------------------------------------------------------------

export const AN_ACTION = 'AN_ACTION';
export const ANOTHER_ACTION = 'ANOTHER_ACTION';







--------------------------------------------------------------------------------
// ./actions/__tests__/index.spec.js
// Create
--------------------------------------------------------------------------------

import { AN_ACTION, ANOTHER_ACTION } from '../../action-types';
import { anAction, anotherAction } from '../';

describe('\`test\` action creators', () => {
  it('should export \`anAction\` function', () => {
    expect(anAction).toBeDefined();
    expect(anAction()).toEqual({
      type: AN_ACTION
    });
  });

  it('should export \`anotherAction\` function', () => {
    expect(anotherAction).toBeDefined();
    expect(anotherAction()).toEqual({
      type: ANOTHER_ACTION
    });
  });
});







--------------------------------------------------------------------------------
// ./actions/__tests__/index.spec.js
// Create
--------------------------------------------------------------------------------

import { AN_ACTION, ANOTHER_ACTION } from '../../action-types';
import { anAction, anotherAction } from '../';

describe('\`test\` action creators', () => {
  it('should export \`anAction\` function', () => {
    expect(anAction).toBeDefined();
    expect(anAction()).toEqual({
      type: AN_ACTION
    });
  });

  it('should export \`anotherAction\` function', () => {
    expect(anotherAction).toBeDefined();
    expect(anotherAction()).toEqual({
      type: ANOTHER_ACTION
    });
  });
});





"
`;

exports[`action-types should create action types and actions with tests in \`my-dir\` 1`] = `
"
--------------------------------------------------------------------------------
// ./action-types/__tests__/index.spec.js
// Create
--------------------------------------------------------------------------------

import { AN_ACTION, ANOTHER_ACTION } from '../';

describe('\`test\` action types', () => {
  it('should export \`AN_ACTION\` type', () => {
    expect(AN_ACTION).toBe('AN_ACTION');
  });

  it('should export \`ANOTHER_ACTION\` type', () => {
    expect(ANOTHER_ACTION).toBe('ANOTHER_ACTION');
  });
});







--------------------------------------------------------------------------------
// ./action-types/index.js
// Create
--------------------------------------------------------------------------------

export const AN_ACTION = 'AN_ACTION';
export const ANOTHER_ACTION = 'ANOTHER_ACTION';







--------------------------------------------------------------------------------
// ./actions/__tests__/index.spec.js
// Create
--------------------------------------------------------------------------------

import { AN_ACTION, ANOTHER_ACTION } from '../../action-types';
import { anAction, anotherAction } from '../';

describe('\`test\` action creators', () => {
  it('should export \`anAction\` function', () => {
    expect(anAction).toBeDefined();
    expect(anAction()).toEqual({
      type: AN_ACTION
    });
  });

  it('should export \`anotherAction\` function', () => {
    expect(anotherAction).toBeDefined();
    expect(anotherAction()).toEqual({
      type: ANOTHER_ACTION
    });
  });
});







--------------------------------------------------------------------------------
// ./actions/__tests__/index.spec.js
// Create
--------------------------------------------------------------------------------

import { AN_ACTION, ANOTHER_ACTION } from '../../action-types';
import { anAction, anotherAction } from '../';

describe('\`test\` action creators', () => {
  it('should export \`anAction\` function', () => {
    expect(anAction).toBeDefined();
    expect(anAction()).toEqual({
      type: AN_ACTION
    });
  });

  it('should export \`anotherAction\` function', () => {
    expect(anotherAction).toBeDefined();
    expect(anotherAction()).toEqual({
      type: ANOTHER_ACTION
    });
  });
});





"
`;

exports[`action-types should create action types with tests in \`action-types\` 1`] = `
"
--------------------------------------------------------------------------------
// ./action-types/__tests__/index.spec.js
// Create
--------------------------------------------------------------------------------

import { AN_ACTION, ANOTHER_ACTION } from '../';

describe('\`test\` action types', () => {
  it('should export \`AN_ACTION\` type', () => {
    expect(AN_ACTION).toBe('AN_ACTION');
  });

  it('should export \`ANOTHER_ACTION\` type', () => {
    expect(ANOTHER_ACTION).toBe('ANOTHER_ACTION');
  });
});







--------------------------------------------------------------------------------
// ./action-types/index.js
// Create
--------------------------------------------------------------------------------

export const AN_ACTION = 'AN_ACTION';
export const ANOTHER_ACTION = 'ANOTHER_ACTION';





"
`;
